[gd_scene load_steps=16 format=2]

[ext_resource path="res://Clock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=2]
[ext_resource path="res://TaskBarTest.tscn" type="PackedScene" id=3]
[ext_resource path="res://DesktopIcons.tscn" type="PackedScene" id=4]
[ext_resource path="res://backgrounds/DesktopBackground.png" type="Texture" id=5]
[ext_resource path="res://among2.png" type="Texture" id=6]
[ext_resource path="res://MoSprite4.png" type="Texture" id=7]
[ext_resource path="res://SmhoSpriteStand.png" type="Texture" id=8]
[ext_resource path="res://among1.png" type="Texture" id=9]
[ext_resource path="res://among4.png" type="Texture" id=10]
[ext_resource path="res://among3.png" type="Texture" id=11]
[ext_resource path="res://Resolution.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "twerk",
"speed": 10.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "AmongUs"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../crewmate2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 659, -337 ), Vector2( 659, -337 ), Vector2( 882, 195 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -301, 722 ), Vector2( -301, 722 ), Vector2( 378, 572 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../crewmate3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1076, 1255 ), Vector2( 1076, 1255 ), Vector2( 1062, 862 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../crewmate2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 146.5, 146.5, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../crewmate3:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -278.7, -278.7, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 209.5, 209.5, 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../crewmate2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 882, 195 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 378, 572 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../crewmate3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1062, 862 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../crewmate2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 146.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../crewmate3:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Resolution" type="Node2D"]
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="TaskBar" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 0.0
margin_top = 1032.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="DesktopIcons" parent="." instance=ExtResource( 4 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Clock" parent="." instance=ExtResource( 1 )]
margin_left = 1720.0
margin_top = 1032.0
margin_right = 1928.0
margin_bottom = 1074.0
rect_min_size = Vector2( 20, 20 )

[node name="MoOverworld" type="Sprite" parent="."]
position = Vector2( 1604, 881 )
scale = Vector2( 2.91, 2.91 )
texture = ExtResource( 7 )

[node name="SmhoSpriteStand" type="Sprite" parent="."]
position = Vector2( 1780, 879 )
scale = Vector2( 2.91, 2.91 )
texture = ExtResource( 8 )

[node name="Camera2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 962, 538 )
current = true

[node name="crewmate" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1684, 207 )
frames = SubResource( 1 )
animation = "twerk"
frame = 3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("crewmate4")
anims/AmongUs = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="crewmate2" type="AnimatedSprite" parent="AnimationPlayer"]
position = Vector2( 882, 195 )
rotation = 2.55691
scale = Vector2( 2.01768, 2.01768 )
frames = SubResource( 1 )
animation = "twerk"
frame = 3
playing = true

[node name="crewmate3" type="AnimatedSprite" parent="AnimationPlayer"]
position = Vector2( 1062, 862 )
frames = SubResource( 1 )
animation = "twerk"
frame = 3
playing = true

[node name="crewmate4" type="AnimatedSprite" parent="AnimationPlayer"]
position = Vector2( 378, 572 )
scale = Vector2( 1.73737, 1.73737 )
frames = SubResource( 1 )
animation = "twerk"
frame = 2
playing = true
